fix offset, prevent overlap on the right side

--- a/themes/kdevelop/styles/20-main-layout.css
+++ b/themes/kdevelop/styles/20-main-layout.css
@@ -83,7 +83,7 @@ html, body {
 /* Middle Column */
 
 #maincontent {
-  left:20px;
+  left:15px;
   padding-left: 13px;     /* CC padding / 2 */
   padding-right: 13px;    /* CC padding / 2 */
   width: 100%;
